# QuizForge

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  analyze_quiz_balance.py  create_lower_extremity_db.py  docker-compose.yml  extract_pdf_images.py  json_to_db.py  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: build-and-deploy.md  plan.md  quiz-generation-prompt.md
scripts/: build-mac.sh  build-portable.bat  build-portable.ps1  build-web.sh  build-win.bat  build-win.ps1
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  watcher.rs
src/css/: style.css
src/js/: app.js  db-bridge.js  i18n.js  quiz-engine.js  toast.js  ui.js
