[package]
name = "quizforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "quizforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-full = "0.4"
parking_lot = "0.12"
